# ass-1/swagger_server/controllers/default_controller.py
@@ -3,7 +3,7 @@ import six
 
 from swagger_server.models.student import Student  # noqa: E501
 from swagger_server import util
-
+from swagger_server.service.student_service import *
 
 def add_student(body=None):  # noqa: E501
     """Add a new student
@@ -16,8 +16,9 @@ def add_student(body=None):  # noqa: E501
     :rtype: float
     """
     if connexion.request.is_json:
-        body = Student.from_dict(connexion.request.get_json())  # noqa: E501
-    return 'do some magic!'
+        body = Student.from_dict(connexion.request.get_json()) # noqa: E501
+        return add(body)
+    return 500,'error'
 
 
 def get_student_by_id(student_id):  # noqa: E501
@@ -30,4 +31,20 @@ def get_student_by_id(student_id):  # noqa: E501
 
     :rtype: Student
     """
-    return 'do some magic!'
+    return get_by_id(student_id)
+
+
+
+def delete_student(student_id):  # noqa: E501
+    """deletes a student
+
+    delete a single student  # noqa: E501
+
+    :param student_id: the uid
+    :type student_id: float
+
+    :rtype: str
+    """
+
+    return delete(student_id)
+
